--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-spring.application.name=api
+spring.datasource.url=jdbc:mysql://localhost:3306/tarefas_api
+spring.datasource.username=root
+spring.datasource.password=secret
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
